
PROJECT(CANVAS_CPP CXX)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)

SET(SKIA_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/deps/skia/include")
SET(SKIA_LIB_DIR "${CMAKE_CURRENT_SOURCE_DIR}/deps/skia/out")
SET(V8_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/deps/v8/include")
SET(V8_LIB_DIR "${CMAKE_CURRENT_SOURCE_DIR}/deps/v8")

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

# Always build with debug symbols for now.
LIST(APPEND CMAKE_CXX_FLAGS -g)

IF(UNIX)
  IF(APPLE)
    FIND_LIBRARY(Carbon_FRAMEWORK Carbon)
    FIND_LIBRARY(Cocoa_FRAMEWORK Cocoa)
    
    IF (Carbon_FRAMEWORK-NOTFOUND)
      MESSAGE(FATAL_ERROR "Did not find Carbon Framework")
    ENDIF (Carbon_FRAMEWORK-NOTFOUND)
    
    SET(CMAKE_OSX_ARCHITECTURES i386) #;x86_64
    ADD_DEFINITIONS("-DPLATFORM_MAC")
  ELSE()
    FIND_PACKAGE(Freetype)
    ADD_DEFINITIONS("-DPLATFORM_LINUX")
  ENDIF()
ENDIF(UNIX)

FIND_PACKAGE(SDL)
FIND_PACKAGE(SDL_image)
FIND_PACKAGE(Boost REQUIRED)

INCLUDE_DIRECTORIES(
  "${CMAKE_CURRENT_SOURCE_DIR}/include"
  "${CMAKE_CURRENT_SOURCE_DIR}/src"
  "${CMAKE_CURRENT_SOURCE_DIR}/tests"
  "${SKIA_INCLUDE_DIR}"
  "${SKIA_INCLUDE_DIR}/config"
  "${V8_INCLUDE_DIR}"
  "${SDL_INCLUDE_DIR}"
  "${SDLIMAGE_INCLUDE_DIR}"
  "${Boost_INCLUDE_DIR}"
)

LINK_DIRECTORIES(
  "${SKIA_LIB_DIR}"
  "${V8_LIB_DIR}"
)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(tests)

# We need SDL and SDL_image to be able to build the demo application
IF (SDL_FOUND OR SDLIMAGE_FOUND)
  ADD_SUBDIRECTORY(examples)
ELSE()
  MESSAGE("Demo will not be built, because SDL and/or SDL_image could not be found.")
ENDIF()
